fixed text alignment

--- a/style.css
+++ b/style.css
@@ -9,13 +9,10 @@ body {
   font-size: 1em;
 }
 
-div#hd {
-	text-align: center;
-}
-
 h1 {
 	font-size: 2.5em;
 	font-weight: bold;
+  text-align: center;
 }
 
 h2 {
